# signed-cookies

./: LICENSE  README.md  SecureCookies.cabal  signed-cookies.cabal  stack.yaml
Web/Scotty/: SecureCookies.hs  SignedCookies.hs
Web/Scotty/SignedCookies/: SignedCookiesInternal.hs
app/: Main.hs
test/: Spec.hs
