name:                signed-cookies
version:             0.1.0.0
synopsis:            Secure cookie implementation for Scotty web framework
description:         Please see README.md
homepage:            https://github.com/kgwinnup/signed-cookies
bug-reports:         https://github.com/kgwinnup/signed-cookies/issues
license:             BSD3
license-file:        LICENSE
author:              Kyle Gwinnup
maintainer:          kpgwinnup@gmail.com
copyright:           2017 Kyle Gwinnup
category:            Web
stability:           experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library 
  exposed-modules:     Web.Scotty.SignedCookies
                     , Web.Scotty.SignedCookies.SignedCookiesInternal
  build-depends:       base >= 2 && < 5
                     , wai
                     , time
                     , scotty
                     , SHA
                     , text
                     , base64-bytestring
                     , blaze-builder
                     , bytestring
                     , attoparsec
                     , cookie
                     , binary
  default-language:    Haskell2010

executable signed-cookies-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 2 && < 5
                     , signed-cookies
                     , wai
                     , cookie
                     , scotty
                     , time
                     , SHA
                     , text
                     , base64-bytestring
                     , bytestring
                     , attoparsec
  default-language:    Haskell2010

test-suite signed-cookies-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 2 && < 5
                     , signed-cookies
                     , QuickCheck
                     , hspec
                     , text
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kgwinnup/signed-cookies
